--- a/1633972602@qq.com/themes/next/_config.yml
+++ b/1633972602@qq.com/themes/next/_config.yml
@@ -242,7 +242,7 @@ sidebar:
   scrollpercent: false
 
   # Enable sidebar on narrow view (only for Muse | Mist).
-  onmobile: false
+  onmobile: true
 
 
 # ---------------------------------------------------------------
