--- a/1633972602@qq.com/_config.yml
+++ b/1633972602@qq.com/_config.yml
@@ -95,6 +95,7 @@ tag_generator:
 ## Plugins: https://hexo.io/plugins/
 # RSS，要先进入站点文件夹根目录安装插件
 plugins: hexo-generate-feed
+  - hexo-footnotes
 # npm install hexo-generator-feed --save 即可
 # 无需更多配置
 # 参数说明查看 README：https://github.com/hexojs/hexo-generator-feed
